# personalnews

./: .env.local.example  .gitignore  App.tsx  CONTRIBUTING.md  GEMINI.md  LICENSE  README.es.md  README.md  README.pt-BR.md  bun.lockb  check-integrity.cjs  eslint.config.js  index.css  index.html  index.tsx  package-lock.json  package.json  playwright.config.cjs  playwright.config.ts  prompt-1240.md  service-worker.js  test-rss2json.ts  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  release.yml
__tests__/: AppContent.cacheFirst.core.test.tsx  ArticleItem.readerNavigation.test.tsx  ArticleReaderModal.core.test.tsx  ConfirmDialog.core.test.tsx  ErrorBoundary.core.test.tsx  ErrorRecovery.core.test.tsx  FavoriteButton.core.test.tsx  FavoritesModal.core.test.tsx  FavoritesViewToolbar.core.test.tsx  FeedAnalytics.dashboard.test.tsx  FeedContext.core.test.tsx  FeedContext.test.tsx  FeedDangerZone.core.test.tsx  FeedInteractiveActions.core.test.tsx  Header.responsiveNav.core.test.ts  LazyImage.core.test.tsx  LazyImage.test.tsx  Logo.snapshot.test.tsx  NewspaperLayout.core.test.tsx  NotificationContext.core.test.tsx  OpmlImportPreviewModal.core.test.tsx  PocketFeedsLayout.player.core.test.tsx  ProgressIndicator.core.test.tsx  ProgressIndicator.test.tsx  ProxyRuntimeHealth.core.test.ts  ProxySettings.accordion.core.test.tsx  SearchBar.core.test.tsx  SearchBar.test.tsx  SettingsSidebar.resetScopes.core.test.tsx  SkeletonLoader.core.test.tsx  articleCache.core.test.ts  (+65 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/apps/backend/data/: personalnews.db
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: allow-open-external-url.json  allow-set-window-style.json  app.toml
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/windows/: hooks.nsh
(+542 files in other folders)
