# Security: GHSA-wrw7-89jp-8q8g (glib VariantStrIter) affects glib < 0.20.0, pulled in by Tauri's
# Linux stack. Fix requires Tauri/wry to depend on glib >= 0.20; we use tauri "2" so updates
# will apply when that lands. See https://github.com/tauri-apps/tauri/pull/12098
[package]
name = "personalnews"
version = "1.7.2"
description = "PersonalNews"
authors = ["mafhper"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
